[gd_scene load_steps=44 format=3 uid="uid://okba3tl3tq5q"]

[ext_resource type="Texture2D" uid="uid://d27ddxiy7es7s" path="res://img/general/button_park.png" id="1_5qo85"]
[ext_resource type="Script" uid="uid://co888xlnm8n37" path="res://scenes/interface/left_menu.gd" id="1_6b6dw"]
[ext_resource type="ButtonGroup" uid="uid://3uln2l11ysu7" path="res://scenes/interface/scene_button_group.tres" id="2_dxqbk"]
[ext_resource type="Texture2D" uid="uid://cgkq2k5hu7efq" path="res://img/general/button_park_active.png" id="2_wpc7x"]
[ext_resource type="Texture2D" uid="uid://bb16804vdkok2" path="res://img/general/button_buy.png" id="3_t6v3e"]
[ext_resource type="Texture2D" uid="uid://bsy7edlqegsrg" path="res://img/general/button_buy_active.png" id="4_7ofq8"]
[ext_resource type="Script" uid="uid://c4o304e180bjd" path="res://scenes/interface/scene_button.gd" id="4_yqnn6"]
[ext_resource type="Texture2D" uid="uid://mqvtgdgekjqr" path="res://img/general/button_dino.png" id="5_0n63s"]
[ext_resource type="Texture2D" uid="uid://db2dij8w3nr6k" path="res://img/general/button_dino_active.png" id="6_i57cf"]
[ext_resource type="Texture2D" uid="uid://dgmkvvvo3bnvn" path="res://img/general/button_staff.png" id="7_qgmgy"]
[ext_resource type="Texture2D" uid="uid://drpsumpqe2an5" path="res://img/general/button_staff_active.png" id="8_rhutm"]
[ext_resource type="Texture2D" uid="uid://ca5cwp1b6bnm5" path="res://img/general/button_science.png" id="9_cj54t"]
[ext_resource type="Texture2D" uid="uid://jv5j86c26fhi" path="res://img/general/button_science_active.png" id="10_lvvyl"]
[ext_resource type="Texture2D" uid="uid://c2i5sfytbiarx" path="res://img/general/button_map.png" id="11_0damm"]
[ext_resource type="Texture2D" uid="uid://bfum6ybsdqqqq" path="res://img/general/button_map_active.png" id="12_kyfxs"]
[ext_resource type="Texture2D" uid="uid://bodxmo3sm0e7w" path="res://img/general/button_menu.png" id="13_ohtir"]
[ext_resource type="Texture2D" uid="uid://buu0dph3foce7" path="res://img/general/button_menu_active.png" id="14_o8cu6"]
[ext_resource type="Texture2D" uid="uid://b4478030e6ko0" path="res://img/general/lower_bar.png" id="15_5bhwv"]
[ext_resource type="Texture2D" uid="uid://f4yinwedrgtd" path="res://img/general/money_icon.png" id="16_cq7gf"]
[ext_resource type="Texture2D" uid="uid://tqrl8dv3somp" path="res://img/general/money_bar.png" id="17_n7n6o"]
[ext_resource type="Texture2D" uid="uid://cc8mojvaw5dlr" path="res://img/general/ticket_icon.png" id="18_8np48"]
[ext_resource type="Texture2D" uid="uid://c6l0nxynuug1h" path="res://img/general/ticket_bar.png" id="19_k2s5s"]
[ext_resource type="Texture2D" uid="uid://dcehr4bohl2no" path="res://img/general/notification_icon.png" id="20_4tqls"]
[ext_resource type="Texture2D" uid="uid://c1bms3tykqlbf" path="res://img/general/notification_bar.png" id="21_ompt2"]
[ext_resource type="Texture2D" uid="uid://d4emcpsl1ungu" path="res://img/general/notification_bar_active.png" id="22_17ex7"]
[ext_resource type="Script" uid="uid://ccw5bebrn2no7" path="res://scenes/interface/lower_bar.gd" id="23_fl4i2"]
[ext_resource type="Texture2D" uid="uid://dcqd14ec0hqy" path="res://img/general/button_yay.png" id="23_l715o"]
[ext_resource type="Texture2D" uid="uid://b2oj0iuhxdvya" path="res://img/general/button_yay_active.png" id="24_rub5w"]
[ext_resource type="Texture2D" uid="uid://53oxgklwl0hn" path="res://img/general/button_nay.png" id="25_u8chh"]
[ext_resource type="Theme" uid="uid://d153qfgnveiau" path="res://cartoon_theme.tres" id="26_iy6lx"]
[ext_resource type="FontFile" uid="uid://vsi8lyvf8fc3" path="res://fonts/BD_Cartoon_Shout.ttf" id="26_ov4b6"]
[ext_resource type="Texture2D" uid="uid://bj5v06ipo3ouq" path="res://img/general/button_nay_active.png" id="26_u5mno"]
[ext_resource type="Texture2D" uid="uid://c4psyvvgbyoak" path="res://img/general/inventory_icon.png" id="28_ccu2c"]
[ext_resource type="Texture2D" uid="uid://bui7bqcu10anf" path="res://img/general/UI_Icon_CalendarMonth.png" id="30_qjk2j"]
[ext_resource type="Script" uid="uid://bmbyb2kxhtk7q" path="res://scenes/interface/ticket_panel.gd" id="30_s18y0"]
[ext_resource type="Texture2D" uid="uid://bfiblj11ewx8k" path="res://img/buy/currency_white.png" id="31_b4581"]
[ext_resource type="PackedScene" uid="uid://cas5ceoryi0jn" path="res://scenes/money/money.tscn" id="36_vg1jw"]
[ext_resource type="Script" uid="uid://t288qe5ckyw2" path="res://scenes/interface/sell_panel.gd" id="38_pj6hq"]

[sub_resource type="Animation" id="Animation_vg1jw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/ActiveNotificationBar:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_b4581"]
resource_name = "new_notification"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/ActiveNotificationBar:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.99, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qjk2j"]
_data = {
&"RESET": SubResource("Animation_vg1jw"),
&"new_notification": SubResource("Animation_b4581")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qjk2j"]
bg_color = Color(0.294118, 0.372549, 0.545098, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pj6hq"]
bg_color = Color(0.681706, 0.742844, 0.870662, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftMenu" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 85.0
offset_bottom = 595.0
theme_override_constants/separation = 0
script = ExtResource("1_6b6dw")
scene_button_group = ExtResource("2_dxqbk")

[node name="ButtonPark" type="TextureButton" parent="LeftMenu"]
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = ExtResource("2_dxqbk")
texture_normal = ExtResource("1_5qo85")
texture_pressed = ExtResource("2_wpc7x")
script = ExtResource("4_yqnn6")
scene = 2
metadata/_custom_type_script = "uid://c4o304e180bjd"

[node name="ButtonBuy" type="TextureButton" parent="LeftMenu"]
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = ExtResource("2_dxqbk")
texture_normal = ExtResource("3_t6v3e")
texture_pressed = ExtResource("4_7ofq8")
script = ExtResource("4_yqnn6")
scene = 3
metadata/_custom_type_script = "uid://c4o304e180bjd"

[node name="ButtonDino" type="TextureButton" parent="LeftMenu"]
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = ExtResource("2_dxqbk")
texture_normal = ExtResource("5_0n63s")
texture_pressed = ExtResource("6_i57cf")
script = ExtResource("4_yqnn6")
scene = 4
metadata/_custom_type_script = "uid://c4o304e180bjd"

[node name="ButtonStaff" type="TextureButton" parent="LeftMenu"]
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = ExtResource("2_dxqbk")
texture_normal = ExtResource("7_qgmgy")
texture_pressed = ExtResource("8_rhutm")
script = ExtResource("4_yqnn6")
scene = 5
metadata/_custom_type_script = "uid://c4o304e180bjd"

[node name="ButtonScience" type="TextureButton" parent="LeftMenu"]
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = ExtResource("2_dxqbk")
texture_normal = ExtResource("9_cj54t")
texture_pressed = ExtResource("10_lvvyl")
script = ExtResource("4_yqnn6")
scene = 6
metadata/_custom_type_script = "uid://c4o304e180bjd"

[node name="ButtonMap" type="TextureButton" parent="LeftMenu"]
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = ExtResource("2_dxqbk")
texture_normal = ExtResource("11_0damm")
texture_pressed = ExtResource("12_kyfxs")
script = ExtResource("4_yqnn6")
scene = 7
metadata/_custom_type_script = "uid://c4o304e180bjd"

[node name="ButtonMenu" type="TextureButton" parent="LeftMenu"]
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = ExtResource("2_dxqbk")
texture_normal = ExtResource("13_ohtir")
texture_pressed = ExtResource("14_o8cu6")
script = ExtResource("4_yqnn6")
scene = 23
metadata/_custom_type_script = "uid://c4o304e180bjd"

[node name="LowerBar" type="TextureRect" parent="." node_paths=PackedStringArray("notification_label", "notification_player", "ticket_label", "money_label", "ticket_panel", "money_panel", "day_bar", "day_label")]
custom_minimum_size = Vector2(800, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -36.0
offset_right = 649.0
grow_vertical = 0
texture = ExtResource("15_5bhwv")
expand_mode = 1
script = ExtResource("23_fl4i2")
notification_label = NodePath("MarginContainer/HBoxContainer/NotificationBar/NotificationLabel")
notification_player = NodePath("MarginContainer/HBoxContainer/NotificationBar/NotificationPlayer")
ticket_label = NodePath("MarginContainer/HBoxContainer/TicketBar/HBoxContainer/TicketLabel")
money_label = NodePath("MarginContainer/HBoxContainer/MoneyBar/HBoxContainer/MoneyLabel")
ticket_panel = NodePath("../TicketPanel")
money_panel = NodePath("../Money")
day_bar = NodePath("MarginContainer/HBoxContainer/TimeBar")
day_label = NodePath("MarginContainer/HBoxContainer/TimeBar/DayLabel")

[node name="MarginContainer" type="MarginContainer" parent="LowerBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="LowerBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 9
alignment = 1

[node name="NotificationIcon" type="TextureRect" parent="LowerBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
texture = ExtResource("20_4tqls")
expand_mode = 1
stretch_mode = 5

[node name="NotificationBar" type="TextureRect" parent="LowerBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
texture = ExtResource("21_ompt2")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="LowerBar/MarginContainer/HBoxContainer/NotificationBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = -5
theme_override_constants/margin_top = -6
theme_override_constants/margin_right = -5
theme_override_constants/margin_bottom = -6

[node name="ActiveNotificationBar" type="TextureButton" parent="LowerBar/MarginContainer/HBoxContainer/NotificationBar/MarginContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("22_17ex7")
ignore_texture_size = true
stretch_mode = 0

[node name="NotificationLabel" type="RichTextLabel" parent="LowerBar/MarginContainer/HBoxContainer/NotificationBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("26_ov4b6")
theme_override_font_sizes/normal_font_size = 11
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="NotificationPlayer" type="AnimationPlayer" parent="LowerBar/MarginContainer/HBoxContainer/NotificationBar"]
libraries = {
&"": SubResource("AnimationLibrary_qjk2j")
}
playback_auto_capture = false

[node name="TicketIcon" type="TextureButton" parent="LowerBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
texture_normal = ExtResource("18_8np48")
ignore_texture_size = true
stretch_mode = 5

[node name="TicketBar" type="TextureButton" parent="LowerBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
texture_normal = ExtResource("19_k2s5s")
ignore_texture_size = true
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="LowerBar/MarginContainer/HBoxContainer/TicketBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TicketLabel" type="RichTextLabel" parent="LowerBar/MarginContainer/HBoxContainer/TicketBar/HBoxContainer"]
texture_filter = 1
clip_contents = false
layout_mode = 2
mouse_filter = 2
theme = ExtResource("26_iy6lx")
theme_override_font_sizes/normal_font_size = 12
text = "222"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="LowerBar/MarginContainer/HBoxContainer/TicketBar/HBoxContainer"]
modulate = Color(0.942823, 0.942823, 0.942823, 1)
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
texture = ExtResource("31_b4581")
expand_mode = 1
stretch_mode = 5

[node name="MoneyIcon" type="TextureButton" parent="LowerBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
texture_normal = ExtResource("16_cq7gf")
ignore_texture_size = true
stretch_mode = 5

[node name="MoneyBar" type="TextureButton" parent="LowerBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
texture_normal = ExtResource("17_n7n6o")
ignore_texture_size = true
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="LowerBar/MarginContainer/HBoxContainer/MoneyBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MoneyLabel" type="RichTextLabel" parent="LowerBar/MarginContainer/HBoxContainer/MoneyBar/HBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_filter = 1
theme = ExtResource("26_iy6lx")
theme_override_font_sizes/normal_font_size = 12
text = "1000"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="LowerBar/MarginContainer/HBoxContainer/MoneyBar/HBoxContainer"]
modulate = Color(0.942823, 0.942823, 0.942823, 1)
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
texture = ExtResource("31_b4581")
expand_mode = 1
stretch_mode = 5

[node name="TimeIcon" type="TextureButton" parent="LowerBar/MarginContainer/HBoxContainer"]
self_modulate = Color(0.899258, 0.899258, 0.899258, 1)
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
texture_normal = ExtResource("30_qjk2j")
ignore_texture_size = true
stretch_mode = 5

[node name="TimeBar" type="TextureProgressBar" parent="LowerBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
step = 0.01
value = 0.5
nine_patch_stretch = true
texture_progress = ExtResource("17_n7n6o")

[node name="DayLabel" type="RichTextLabel" parent="LowerBar/MarginContainer/HBoxContainer/TimeBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 1
theme = ExtResource("26_iy6lx")
theme_override_font_sizes/normal_font_size = 12
text = "Day 1"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackpackButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 14.0
offset_top = 501.0
offset_right = 84.0
offset_bottom = 601.0
size_flags_vertical = 3
texture_normal = ExtResource("28_ccu2c")
ignore_texture_size = true
stretch_mode = 5

[node name="TicketPanel" type="PanelContainer" parent="." node_paths=PackedStringArray("ticket_slider", "ticket_input")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -44.5
offset_right = 185.0
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("30_s18y0")
ticket_slider = NodePath("MarginContainer/VBoxContainer/HBoxContainer/TicketSlider")
ticket_input = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/TicketInput")

[node name="MarginContainer" type="MarginContainer" parent="TicketPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="TicketPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="TicketPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("26_iy6lx")
text = "Change ticket price"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TicketPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TicketSlider" type="HSlider" parent="TicketPanel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 200.0
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="TicketPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TicketInput" type="LineEdit" parent="TicketPanel/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("26_iy6lx")
theme_override_constants/minimum_character_width = 2
text = "20"
alignment = 2
max_length = 3

[node name="TextureRect" type="TextureRect" parent="TicketPanel/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
modulate = Color(0.804743, 0.804743, 0.804743, 1)
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("31_b4581")
expand_mode = 1
stretch_mode = 5

[node name="Buttons" type="HBoxContainer" parent="TicketPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NayButton" type="TextureButton" parent="TicketPanel/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
texture_normal = ExtResource("25_u8chh")
texture_pressed = ExtResource("26_u5mno")
ignore_texture_size = true
stretch_mode = 5

[node name="YayButton" type="TextureButton" parent="TicketPanel/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
texture_normal = ExtResource("23_l715o")
texture_pressed = ExtResource("24_rub5w")
ignore_texture_size = true
stretch_mode = 5

[node name="Money" parent="." instance=ExtResource("36_vg1jw")]
visible = false
layout_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(700, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qjk2j")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 90
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pj6hq")

[node name="SellPanel" type="PanelContainer" parent="." node_paths=PackedStringArray("sell_label")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -423.5
offset_top = -68.0
offset_right = 316.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("38_pj6hq")
sell_label = NodePath("MarginContainer/VBoxContainer/Label")

[node name="MarginContainer" type="MarginContainer" parent="SellPanel"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SellPanel/MarginContainer"]
layout_mode = 2
mouse_filter = 0

[node name="Label" type="Label" parent="SellPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
mouse_filter = 0
theme = ExtResource("26_iy6lx")
text = "Do you want to sell the typranussaurus rex for for 1000?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SellPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 0
alignment = 1

[node name="NayButton" type="TextureButton" parent="SellPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("25_u8chh")
texture_pressed = ExtResource("26_u5mno")

[node name="YayButton" type="TextureButton" parent="SellPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("23_l715o")
texture_pressed = ExtResource("24_rub5w")

[connection signal="pressed" from="LowerBar/MarginContainer/HBoxContainer/NotificationBar/MarginContainer/ActiveNotificationBar" to="LowerBar" method="on_notification_pressed"]
[connection signal="pressed" from="LowerBar/MarginContainer/HBoxContainer/TicketIcon" to="LowerBar" method="on_ticket_price_pressed"]
[connection signal="pressed" from="LowerBar/MarginContainer/HBoxContainer/TicketBar" to="LowerBar" method="on_ticket_price_pressed"]
[connection signal="pressed" from="LowerBar/MarginContainer/HBoxContainer/MoneyIcon" to="LowerBar" method="on_money_pressed"]
[connection signal="pressed" from="LowerBar/MarginContainer/HBoxContainer/MoneyBar" to="LowerBar" method="on_money_pressed"]
[connection signal="pressed" from="LowerBar/MarginContainer/HBoxContainer/TimeIcon" to="LowerBar" method="on_money_pressed"]
[connection signal="pressed" from="BackpackButton" to="LeftMenu" method="on_backpack_pressed"]
[connection signal="visibility_changed" from="TicketPanel" to="TicketPanel" method="on_visibility_changed"]
[connection signal="value_changed" from="TicketPanel/MarginContainer/VBoxContainer/HBoxContainer/TicketSlider" to="TicketPanel" method="on_value_changed"]
[connection signal="text_submitted" from="TicketPanel/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/TicketInput" to="TicketPanel" method="on_input_submitted"]
[connection signal="pressed" from="TicketPanel/MarginContainer/VBoxContainer/Buttons/NayButton" to="TicketPanel" method="on_nay_pressed"]
[connection signal="pressed" from="TicketPanel/MarginContainer/VBoxContainer/Buttons/YayButton" to="TicketPanel" method="on_yay_pressed"]
[connection signal="pressed" from="SellPanel/MarginContainer/VBoxContainer/HBoxContainer/NayButton" to="SellPanel" method="on_nay_pressed"]
[connection signal="pressed" from="SellPanel/MarginContainer/VBoxContainer/HBoxContainer/YayButton" to="SellPanel" method="on_yay_pressed"]
